--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "commander": "^4.1.1"
+    "commander": "^4.1.1",
+    "inquirer": "^7.0.6"
   }
 }
