--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "node-todo-1",
-  "version": "0.0.1",
+  "name": "node-todo-001",
+  "bin":{
+    "t": "cli.js"
+  },
+  "files":["*.js"],
+  "version": "0.0.3",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
