--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "node-todo-001",
-  "bin":{
+  "bin": {
     "t": "cli.js"
   },
-  "files":["*.js"],
+  "files": [
+    "*.js"
+  ],
+  "scripts": {
+    "test": "jest"
+  },
   "version": "0.0.3",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "commander": "^4.1.1",
     "inquirer": "^7.0.6"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
